--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1335,7 +1335,7 @@ input:focus {
 
 @media (max-height: 690px) {
   .skill-item {
-    max-height: calc(230px - 20px * 0.66);
+    min-height: calc(230px - 20px * 0.66);
   }
 }
 
