--- a/assets/scss/sections/_section-skills.scss
+++ b/assets/scss/sections/_section-skills.scss
@@ -67,7 +67,7 @@
     }
 
     @media (max-height: 690px) {
-        max-height: calc(230px - #{$gap} * 0.66);
+        min-height: calc(230px - #{$gap} * 0.66);
     }
 
     &__link {
