--- a/assets/scss/sections/_section-posts.scss
+++ b/assets/scss/sections/_section-posts.scss
@@ -98,7 +98,7 @@
     overflow: hidden;
     background-color: $color-main;
     justify-content: center;
-    align-items: center;
+    align-content: center;
 
     img {
         width: 100%;
